tests/valid_seq/module_d.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%

:- module module_d.
:- interface.

:- type module_d.foo == int.
