tests/invalid_make_int/test_nested_helper_2.test_nested_helper_6.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%
%
% This is part of the test_nested.m test case.

:- module test_nested_helper_2.test_nested_helper_6.
:- interface.

:- type foo.

:- implementation.

:- type foo == int.
